--- a/Sample-KeyVaultAccess/package.json
+++ b/Sample-KeyVaultAccess/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "azure-keyvault": "^3.0.4"
+    "azure-keyvault": "^3.0.4",
+    "request": "^2.88.0"
   }
 }
